k8s/apps/network/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: mosquitto-tls
  namespace: iot
spec:
  hostnames:
    - mosquitto.jnobrega.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
      sectionName: tls
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mosquitto
          namespace: iot
          port: 8883
          weight: 1
